bug #25097 Fixed popup cross overlap for mobile

--- a/themes/dpla/css/main.css
+++ b/themes/dpla/css/main.css
@@ -4328,6 +4328,13 @@ aside { height: 100%; }
     margin: 0 0 5px;
 }
 
+#cboxClose,
+.cboxClose {
+    right: 10px;
+    top: 26px;
+    text-align: center;
+}
+
 }
 
 
